--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,31 @@
-# Arquivos de ambiente
-.env
-env_config.txt
-
-# Cache Python
+# Python-generated files
 __pycache__/
-*.py[cod]
-*$py.class
-
-# Distribuição / empacotamento
-.Python
+*.py[oc]
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
 wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+*.egg-info
 
-# PyInstaller
-*.manifest
-*.spec
+# Virtual environments
+.venv
+
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Database files
+*.db
+tpm/
+tmp/
 
 # Logs
 *.log
 
-# Arquivos temporários
-*.tmp
-*.temp
-
-# IDEs
+# IDE files
 .vscode/
 .idea/
-*.swp
-*.swo
 
-# Sistema operacional
+# OS files
 .DS_Store
 Thumbs.db
