--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,18 @@
+# Assessment DISC - Configuração Render.com
+# Deploy automático para aplicação Streamlit
+
 services:
   - type: web
-    name: equipe-multilingue-disc
+    name: assessment-disc-app
     env: python
-    plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: streamlit run app.py --server.port $PORT --server.address 0.0.0.0
+    startCommand: streamlit run main_app.py --server.port $PORT --server.address 0.0.0.0
     envVars:
       - key: OPENAI_API_KEY
-        sync: false 
+        sync: false
+      - key: TAVILY_API_KEY
+        sync: false
+      - key: ENVIRONMENT
+        value: production
+      - key: DEBUG
+        value: false 
